# kube2docs

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/explorer/: cli.py
src/kube2docs/: __init__.py  cli.py  config.py  scanner.py
src/kube2docs/ai/: extractor.py  provider.py  writer.py
src/kube2docs/knowledge/: fingerprint.py  schemas.py  store.py
src/kube2docs/kube/: client.py  exec.py
src/kube2docs/phases/: agentic.py  deep_inspect.py  image_inspect.py  survey.py
src/kube2docs/progress/: tracker.py
src/kube2docs/security/: hasher.py
tests/: test_agentic.py  test_extractor.py  test_fingerprint.py  test_hasher.py  test_image_inspect.py  test_scanner.py  test_schemas.py
